--- a/apps/park/sample_pq.ipynb
+++ b/apps/park/sample_pq.ipynb
@@ -5,10 +5,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        'one': [-1, np.nan, 2.5],\n",
+    "        'two': ['foo', 'bar', 'baz'],\n",
+    "        'three': [True, False, True]\n",
+    "    },\n",
+    "    index=list('abc'))\n",
+    "table = pa.Table.from_pandas(df)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -19,10 +33,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
+   "version": "3.7.8"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
